cursive-bootstrap/tests/ui/E-TYP/E-TYP-2402.cursive
// RUN: compile-fail
// DIAG: E-TYP-2402
// SPEC: 5.3
// DESC: Implementing type missing required field

class Sized {
    size: usize
}

record Empty <: Sized { }  //~ ERROR E-TYP-2402



public procedure main(move ctx: Context) -> i32 {
    return 0
}

